--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,4 @@
-black==23.1.0
-pint
-pytest
-matplotlib
-pytest
-pytest-cov
-pypubsub
-pytz
-pyvis
+pint==0.22
+matplotlib==3.8.0
+pytz==2023.3.post1
+pyvis==0.3.2
