--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,50 @@
-pint==0.22
-matplotlib==3.8.0
-pytz==2023.3.post1
-pyvis==0.3.2
-plotly==5.18.*
-pandas==2.1.*
-requests==2.31.*
+asttokens==2.4.1 ; python_version >= "3.9" and python_version < "4.0"
+certifi==2024.2.2 ; python_version >= "3.9" and python_version < "4.0"
+charset-normalizer==3.3.2 ; python_version >= "3.9" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "win32"
+contourpy==1.2.0 ; python_version >= "3.9" and python_version < "4.0"
+cycler==0.12.1 ; python_version >= "3.9" and python_version < "4.0"
+decorator==5.1.1 ; python_version >= "3.9" and python_version < "4.0"
+exceptiongroup==1.2.0 ; python_version >= "3.9" and python_version < "3.11"
+executing==2.0.1 ; python_version >= "3.9" and python_version < "4.0"
+fonttools==4.49.0 ; python_version >= "3.9" and python_version < "4.0"
+idna==3.6 ; python_version >= "3.9" and python_version < "4.0"
+importlib-resources==6.1.2 ; python_version >= "3.9" and python_version < "3.10"
+ipython==8.18.1 ; python_version >= "3.9" and python_version < "4.0"
+jedi==0.19.1 ; python_version >= "3.9" and python_version < "4.0"
+jinja2==3.1.3 ; python_version >= "3.9" and python_version < "4.0"
+jsonpickle==3.0.3 ; python_version >= "3.9" and python_version < "4.0"
+kiwisolver==1.4.5 ; python_version >= "3.9" and python_version < "4.0"
+markupsafe==2.1.5 ; python_version >= "3.9" and python_version < "4.0"
+matplotlib-inline==0.1.6 ; python_version >= "3.9" and python_version < "4.0"
+matplotlib==3.8.0 ; python_version >= "3.9" and python_version < "4.0"
+networkx==3.2.1 ; python_version >= "3.9" and python_version < "4.0"
+numpy==1.26.4 ; python_version >= "3.9" and python_version < "4.0"
+packaging==23.2 ; python_version >= "3.9" and python_version < "4.0"
+pandas==2.2.0 ; python_version >= "3.9" and python_version < "4.0"
+parso==0.8.3 ; python_version >= "3.9" and python_version < "4.0"
+pexpect==4.9.0 ; python_version >= "3.9" and python_version < "4.0" and sys_platform != "win32"
+pillow==10.2.0 ; python_version >= "3.9" and python_version < "4.0"
+pint==0.23 ; python_version >= "3.9" and python_version < "4.0"
+plotly==5.19.0 ; python_version >= "3.9" and python_version < "4.0"
+prompt-toolkit==3.0.43 ; python_version >= "3.9" and python_version < "4.0"
+ptyprocess==0.7.0 ; python_version >= "3.9" and python_version < "4.0" and sys_platform != "win32"
+pure-eval==0.2.2 ; python_version >= "3.9" and python_version < "4.0"
+pygments==2.17.2 ; python_version >= "3.9" and python_version < "4.0"
+pyparsing==3.1.1 ; python_version >= "3.9" and python_version < "4.0"
+python-dateutil==2.9.0.post0 ; python_version >= "3.9" and python_version < "4.0"
+pytz==2024.1 ; python_version >= "3.9" and python_version < "4.0"
+pyvis==0.3.2 ; python_version >= "3.9" and python_version < "4.0"
+requests==2.31.0 ; python_version >= "3.9" and python_version < "4.0"
+setuptools-scm==8.0.4 ; python_version >= "3.9" and python_version < "4.0"
+setuptools==69.1.1 ; python_version >= "3.9" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
+stack-data==0.6.3 ; python_version >= "3.9" and python_version < "4.0"
+tenacity==8.2.3 ; python_version >= "3.9" and python_version < "4.0"
+tomli==2.0.1 ; python_version >= "3.9" and python_version < "3.11"
+traitlets==5.14.1 ; python_version >= "3.9" and python_version < "4.0"
+typing-extensions==4.10.0 ; python_version >= "3.9" and python_version < "4.0"
+tzdata==2024.1 ; python_version >= "3.9" and python_version < "4.0"
+urllib3==2.2.1 ; python_version >= "3.9" and python_version < "4.0"
+wcwidth==0.2.13 ; python_version >= "3.9" and python_version < "4.0"
+zipp==3.17.0 ; python_version >= "3.9" and python_version < "3.10"
