--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@
 
 [tool.poetry]
 name = "efootprint"
-version = "1.2.1"
+version = "1.2.2"
 description = "Digital service environmental footprint model"
 authors = ["Vincent Villet for Publicis Sapient"]
 readme = "README.md"
@@ -51,6 +51,8 @@ requests = '2.31'
 pytest = '*'
 pytest-cov = '*'
 jupyter = "^1.0.0"
+ipykernel = "^6.29.3"
 mkdocs-material = "*"
 pymdown-extensions = "*"
 jinja2 = "*"
+nbconvert = "*"
