--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,14 +20,16 @@ site_dir: docs
 nav:
 - Introduction: index.md
 - Tutorial: tutorial_reformated.md
-- System: System.md
-- UsagePattern: UsagePattern.md
-- UserJourney: UserJourney.md
-- DevicePopulation: DevicePopulation.md
-- Network: Network.md
-- UserJourneyStep: UserJourneyStep.md
-- Service: Service.md
-- Autoscaling: Autoscaling.md
-- Storage: Storage.md
-- Country: Country.md
-- Hardware: Hardware.md
+- e-footprint objects reference:
+  - How to read the object reference: object_reference.md
+  - System: System.md
+  - UsagePattern: UsagePattern.md
+  - UserJourney: UserJourney.md
+  - DevicePopulation: DevicePopulation.md
+  - Network: Network.md
+  - UserJourneyStep: UserJourneyStep.md
+  - Service: Service.md
+  - Autoscaling: Autoscaling.md
+  - Storage: Storage.md
+  - Country: Country.md
+  - Hardware: Hardware.md
