--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,16 +20,20 @@ site_dir: docs
 nav:
 - Introduction: index.md
 - Tutorial: tutorial_reformated.md
+- Explanation: explanation.md
 - e-footprint objects reference:
   - How to read the object reference: object_reference.md
-  - System: System.md
-  - UsagePattern: UsagePattern.md
-  - UserJourney: UserJourney.md
-  - DevicePopulation: DevicePopulation.md
-  - Network: Network.md
-  - UserJourneyStep: UserJourneyStep.md
+  - Hardware:
+      - Servers:
+          - Autoscaling: Autoscaling.md
+      - DevicePopulation: DevicePopulation.md
+      - Hardware: Hardware.md
+      - Network: Network.md
+      - Storage: Storage.md
+  - Usage:
+      - UsagePattern: UsagePattern.md
+      - UserJourney: UserJourney.md
+      - UserJourneyStep: UserJourneyStep.md
   - Service: Service.md
-  - Autoscaling: Autoscaling.md
-  - Storage: Storage.md
+  - System: System.md
   - Country: Country.md
-  - Hardware: Hardware.md
