[DOCS/ADD] Builders section in docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,4 +38,5 @@ nav:
   - Service: Service.md
   - System: System.md
   - Country: Country.md
+- e-footprint builders: builders.md
 - Changelog: Changelog.md
