[UPDATE] Classes calculation logic to handle chronological hourly time management. Classes unit tests passing.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ pyvis = '0.3.2'
 plotly = '5.19'
 pandas = '2.2'
 requests = '2.31'
+Pint-Pandas= "^0.6"
 
 [tool.poetry.group.dev.dependencies]
 pytest = '*'
